[package]
name = "downcast-rs"
version = "1.0.4"
authors = ["Ashish Myles <marcianx@gmail.com>"]
repository = "https://github.com/marcianx/downcast-rs"
description = """
Trait object downcasting support using only safe Rust. It supports type
parameters, associated types, and type constraints.
"""
readme = "README.md"
keywords = ["downcast", "any", "trait", "associated", "constraint"]
license = "MIT/Apache-2.0"

