[package]
name = "downcast-rs"
edition = "2015"
version = "1.2.1"
repository = "https://github.com/marcianx/downcast-rs"
description = """
Trait object downcasting support using only safe Rust. It supports type
parameters, associated types, and type constraints.
"""
readme = "README.md"
keywords = ["downcast", "any", "trait", "associated", "no_std"]
license = "MIT/Apache-2.0"

[features]
default = ["std", "sync"]
std = []
sync = []
